--- a/requirements.txt
+++ b/requirements.txt
@@ -1,217 +1,9 @@
-absl-py==2.0.0
-aiohttp==3.9.1
-aiosignal==1.3.1
-altgraph==0.17.4
-annotated-types==0.6.0
-anyio==4.2.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asn1crypto==1.5.1
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==23.1.0
-Babel==2.14.0
-base58==2.1.1
-beautifulsoup4==4.12.2
-bleach==6.1.0
+babel==2.16.0
 blinker==1.8.2
-cachetools==5.3.2
-certifi==2023.7.22
-cffi==1.16.0
-charset-normalizer==3.3.2
 click==8.1.7
-coincurve==19.0.1
 colorama==0.4.6
-comm==0.2.0
-comtypes==1.2.0
-contourpy==1.1.0
-cycler==0.11.0
-cytoolz==0.12.3
-debugpy==1.8.0
-decorator==5.1.1
-defusedxml==0.7.1
-distro==1.9.0
-docx2txt==0.8
-dropbox==11.36.2
-et-xmlfile==1.1.0
-eth-hash==0.7.0
-eth-typing==4.2.3
-eth-utils==4.1.1
-eth_abi==5.1.0
-executing==2.0.1
-fastjsonschema==2.19.0
 Flask==3.0.3
-flatbuffers==23.5.26
-fonttools==4.42.1
-fqdn==1.5.1
-frozenlist==1.4.1
-gast==0.5.4
-google-auth==2.25.2
-google-auth-oauthlib==1.2.0
-google-pasta==0.2.0
-grpcio==1.60.0
-h11==0.14.0
-h5py==3.10.0
-httpcore==1.0.2
-httpx==0.26.0
-idna==3.4
-imbalanced-learn==0.11.0
-ipykernel==6.28.0
-ipython==8.19.0
-isoduration==20.11.0
 itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.2
-joblib==1.3.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.20.0
-jsonschema-specifications==2023.12.1
-jupyter-events==0.9.0
-jupyter-lsp==2.2.1
-jupyter_client==8.6.0
-jupyter_core==5.6.0
-jupyter_server==2.12.1
-jupyter_server_terminals==0.5.1
-jupyterlab==4.0.9
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
-keras==2.15.0
-keyboard==0.13.5
-kiwisolver==1.4.5
-kucoin-python==1.0.14
-libclang==16.0.6
-lxml==4.9.3
-Markdown==3.5.1
-MarkupSafe==2.1.3
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-mega.py==1.0.8
-mistune==3.0.2
-ml-dtypes==0.2.0
-MouseInfo==0.1.3
-mss==9.0.1
-multidict==6.0.4
-nbclient==0.9.0
-nbconvert==7.13.1
-nbformat==5.9.2
-nest-asyncio==1.5.8
-notebook==7.0.6
-notebook_shim==0.2.3
-numpy==1.25.2
-oauthlib==3.2.2
-openai==1.6.1
-opencv-python==4.8.1.78
-openpyxl==3.1.2
-opt-einsum==3.3.0
-outcome==1.3.0.post0
-overrides==7.4.0
-packaging==23.1
-pandas==2.1.4
-pandocfilters==1.5.0
-parsimonious==0.10.0
-parso==0.8.3
-pefile==2023.2.7
-pillow==10.2.0
-platformdirs==4.1.0
-ply==3.11
-pocketsphinx==5.0.3
-praw==7.7.1
-prawcore==2.4.0
-prometheus-client==0.19.0
-prompt-toolkit==3.0.43
-protobuf==4.23.4
-psutil==5.9.6
-pure-eval==0.2.2
-pyaes==1.6.1
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-PyAudio==0.2.14
-PyAutoGUI==0.9.54
-pycparser==2.21
-pycryptodome==3.19.0
-pydantic==2.5.3
-pydantic_core==2.14.6
-pygame==2.5.2
-PyGetWindow==0.0.9
-Pygments==2.17.2
-pyinstaller==6.2.0
-pyinstaller-hooks-contrib==2023.10
-PyMsgBox==1.0.9
-pynput==1.7.6
-pyparsing==3.0.9
-pyperclip==1.8.2
-pypiwin32==223
-PyRect==0.2.0
-PyScreeze==0.1.30
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-docx==0.8.11
-python-json-logger==2.0.7
-python-telegram-bot==20.8
-python-vlc==3.0.20123
-pyttsx3==2.90
-pytweening==1.0.7
-pytz==2023.3.post1
-pywin32-ctypes==0.2.2
-pywinpty==2.0.12
-PyYAML==6.0.1
-pyzmq==25.1.2
-referencing==0.32.0
-regex==2024.5.15
-requests==2.31.0
-requests-oauthlib==1.3.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.15.2
-rsa==4.9
-schedule==1.2.1
-scikit-learn==1.3.2
-scipy==1.11.4
-selenium==4.18.1
-Send2Trash==1.8.2
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-sounddevice==0.4.6
-soupsieve==2.5
-SpeechRecognition==3.10.1
-stack-data==0.6.3
-stone==3.3.1
-Telethon==1.34.0
-tenacity==5.1.5
-tensorboard==2.15.1
-tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-intel==2.15.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-terminado==0.18.0
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-toolz==0.12.1
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.0
-trio==0.24.0
-trio-websocket==0.11.1
-tronpy==0.5.0
-tweepy==4.14.0
-types-python-dateutil==2.8.19.14
-typing_extensions==4.9.0
-tzdata==2023.3
-update-checker==0.18.0
-uri-template==1.3.0
-urllib3==2.0.7
-wcwidth==0.2.12
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.7.0
-websockets==12.0
-Werkzeug==3.0.1
-wrapt==1.14.1
-wsproto==1.2.0
-yarl==1.9.4
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+Werkzeug==3.0.4
